--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -7,27 +7,23 @@
   <div class="relative product flex to-md:flex-col items-start gap-s10 lg:px-36 pb-s12 md:pb-s13 max-w-content-lg mx-auto">
     <div id="images-{{ section.id }}" class="images flex-1 grid grid-cols-2 gap-s3 to-md:hidden">
       {% if product.selected_or_first_available_variant.image %}
-        <img id="Thumbnail-{{ section.id }}-0" class="row-span-2 col-span-2 w-full h-full" src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}" alt="{{ product.selected_or_first_available_variant.image.alt | escape }}" loading="lazy">
+        <img id="Thumbnail-{{ section.id }}-0" class="row-span-2 col-span-2 w-full h-full" src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}" alt="{{ product.selected_or_first_available_variant.image.alt | escape }}">
       {% endif %}
       {%- for media in product.media -%}
         {% unless variant_images contains media.src %}
-          <img id="Thumbnail-{{ section.id }}-{{ forloop.index }}" src="{{ media | image_url: width: 700 }}" alt="{{ media.alt | escape }}" loading="lazy" class="row-span-1 col-span-1 w-full h-full object-cover">
+          <img id="Thumbnail-{{ section.id }}-{{ forloop.index }}" src="{{ media | image_url: width: 700 }}" alt="{{ media.alt | escape }}" class="row-span-1 col-span-1 w-full h-full object-cover">
         {% endunless %}
       {% endfor %}
     </div>
     <img-carousel id="mobile-images-{{ section.id }}" class="md:hidden w-full">
       <div class="carousel">
         <div style="padding-top:100%; width:100%;"></div>
-        {% assign variantImg = false %}
+        {% assign carouselIndex = 0 %}
         {% if product.selected_or_first_available_variant.image %}
-          <img id="Thumbnail-{{ section.id }}-0" class="carousel-img absolute top-0 transition-left w-full aspect-square object-cover" style="left:calc(100% * 0);" src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}" alt="{{ product.selected_or_first_available_variant.image.alt | escape }}" loading="lazy" data-index="0">
-          {% assign variantImg = true %}
+          <img id="Thumbnail-{{ section.id }}-0" class="carousel-img absolute top-0 transition-left w-full aspect-square object-cover" style="left:calc(100% * 0);" src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}" alt="{{ product.selected_or_first_available_variant.image.alt | escape }}" data-index="0">
+          {% assign carouselIndex = carouselIndex | plus: 1 %}
         {% endif %}
         {%- for media in product.media -%}
-          {% assign index = forloop.index0 %}
-          {% if variantImg %}
-            {% assign index = forloop.index0 | plus: 1 %}
-          {% endif %}
           {% unless variant_images contains media.src %}
             <img id="Thumbnail-{{ section.id }}-{{ index }}" src="{{ media | image_url: width: 700 }}" alt="{{ media.alt | escape }}" loading="lazy" class="carousel-img absolute top-0 transition-left w-full aspect-square" style="left:calc(100% * {{ index }} + 12px * {{ index }});" data-index="{{ index }}">
           {% endunless %}
