--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -2,12 +2,20 @@
 <script src="{{ 'accordion.js' | asset_url }}" defer="defer"></script>
 {% assign currentVariant = product.selected_or_first_available_variant %}
 {%- assign variant_images = product.images | where: 'attached_to_variant?', true | map: 'src' -%}
+<script>
+    const jsVariantImages = [];
+    {% for image in variant_images %}
+        const img = new Image()
+        img.src = '{{ image }}'
+        jsVariantImages.append(img)
+    {% endfor %}
+</script>
 <section id="MainProduct-{{ section.id }}" class="w-full px-72 bg-black-50" data-section="{{ section.id }}">
   {% render 'breadcrumb' %}
   <div class="relative product flex to-md:flex-col items-start gap-s10 lg:px-36 pb-s12 md:pb-s13 max-w-content-lg mx-auto">
     <div id="images-{{ section.id }}" class="images flex-1 grid grid-cols-2 gap-s3 to-md:hidden">
       {% if product.selected_or_first_available_variant.image %}
-        <img id="Thumbnail-{{ section.id }}-0" class="row-span-2 col-span-2 w-full h-full" src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}" alt="{{ product.selected_or_first_available_variant.image.alt | escape }}">
+        <img id="Thumbnail-{{ section.id }}-0" class="variant-image row-span-2 col-span-2 w-full h-full" src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}" alt="{{ product.selected_or_first_available_variant.image.alt | escape }}">
       {% endif %}
       {%- for media in product.media -%}
         {% unless variant_images contains media.src %}
