--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -15,11 +15,11 @@
   <div class="relative product flex to-md:flex-col items-start gap-s10 lg:px-36 pb-s12 md:pb-s13 max-w-content-lg mx-auto">
     <div id="images-{{ section.id }}" class="images flex-1 grid grid-cols-2 gap-s3 to-md:hidden">
       {% if product.selected_or_first_available_variant.image %}
-        <img id="Thumbnail-{{ section.id }}-0" class="variant-image row-span-2 col-span-2 w-full h-full" src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}" alt="{{ product.selected_or_first_available_variant.image.alt | escape }}">
+        <img id="Thumbnail-{{ section.id }}-variant" class="variant-image row-span-2 col-span-2 w-full h-full" src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}" alt="{{ product.selected_or_first_available_variant.image.alt | escape }}">
       {% endif %}
       {%- for media in product.media -%}
         {% unless variant_images contains media.src %}
-          <img id="Thumbnail-{{ section.id }}-{{ forloop.index }}" src="{{ media | image_url: width: 700 }}" alt="{{ media.alt | escape }}" class="row-span-1 col-span-1 w-full h-full object-cover">
+          <img id="Thumbnail-{{ section.id }}-{{ forloop.index0 }}" src="{{ media | image_url: width: 700 }}" alt="{{ media.alt | escape }}" class="row-span-1 col-span-1 w-full h-full object-cover">
         {% endunless %}
       {% endfor %}
     </div>
