insta tagline update

--- a/sections/footer-main.liquid
+++ b/sections/footer-main.liquid
@@ -1,7 +1,7 @@
 <div class="max-w-[1440px] mx-auto">
   <div class="pt-s10">
     <div class="flex justify-between items-center px-36 lg:px-72">
-      <p class="faux-h6 text-black-500 ">{{ section.settings.instaTagline }}</p>
+      <p class="faux-h6 text-black-500 normal-case">{{ section.settings.instaTagline }}</p>
       <a class="btn btn--sm btn--borderless to-md:hidden" href="{{ settings.social_instagram_link }}">{{ section.settings.followLinkText }}</a>
     </div>
     <style>
