Generate new tailwind class

--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -4792,6 +4792,10 @@ video {
   text-transform: capitalize;
 }
 
+#app .normal-case{
+  text-transform: none;
+}
+
 #app .italic{
   font-style: italic;
 }
