Fixing mobile issues on homepage

--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -722,7 +722,7 @@ nav.search-mode .search input{
 
 @media (max-width: 767px){
   .bg-image-cta:not(.middle) .bg-image{
-    height: 500px;
+    height: 300px;
   }
 }
 
@@ -3607,6 +3607,11 @@ video {
   margin-right: 20px;
 }
 
+#app .-mx-30{
+  margin-left: -30px;
+  margin-right: -30px;
+}
+
 #app .mr-s4{
   margin-right: 16px;
 }
@@ -3737,6 +3742,14 @@ video {
 
 #app .mr-\[-2px\]{
   margin-right: -2px;
+}
+
+#app .-mt-30{
+  margin-top: -30px;
+}
+
+#app .-mt-36{
+  margin-top: -36px;
 }
 
 #app .block{
@@ -3992,6 +4005,10 @@ video {
 
 #app .w-\[236px\]{
   width: 236px;
+}
+
+#app .w-5\/6{
+  width: 83.333333%;
 }
 
 #app .max-w-content{
@@ -5500,10 +5517,6 @@ video {
 }
 
 @media (max-width: 767px){
-  #app .to-md\:absolute{
-    position: absolute;
-  }
-
   #app .to-md\:top-0{
     top: 0px;
   }
@@ -5525,8 +5538,21 @@ video {
     margin-right: auto;
   }
 
+  #app .to-md\:-mx-30{
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+
   #app .to-md\:mt-\[calc\(80\%\+20px\)\]{
     margin-top: calc(80% + 20px);
+  }
+
+  #app .to-md\:-mt-30{
+    margin-top: -30px;
+  }
+
+  #app .to-md\:-mt-36{
+    margin-top: -36px;
   }
 
   #app .to-md\:flex{
@@ -5543,6 +5569,10 @@ video {
 
   #app .to-md\:h-s5{
     height: 20px;
+  }
+
+  #app .to-md\:w-5\/6{
+    width: 83.333333%;
   }
 
   #app .to-md\:max-w-\[306px\]{
