--- a/sections/bg-image-cta.liquid
+++ b/sections/bg-image-cta.liquid
@@ -1,6 +1,6 @@
 <div class="bg-image-cta relative flex items-center  md:p-72 lg:p-s13 {{section.settings.position}}">
   <img src="{{ section.settings.bgImage | image_url }}" class="bg-image" />
-  <div class="relative w-full max-w-content mx-auto">
+  <div class="relative to-md:w-5/6 to-md:-mt-36 w-full max-w-content mx-auto">
     <div class="cta relative w-full bg-white">
       <h2 class="text-primary-800">{{ section.settings.heading }}</h2>
       <p class="max-w-[548px] mx-auto text-black-600">{{ section.settings.text }}</p>
