--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -33,7 +33,8 @@
         {% endif %}
         {%- for media in product.media -%}
           {% unless variant_images contains media.src %}
-            <img id="Thumbnail-{{ section.id }}-{{ index }}" src="{{ media | image_url: width: 700 }}" alt="{{ media.alt | escape }}" loading="lazy" class="carousel-img absolute top-0 transition-left w-full aspect-square" style="left:calc(100% * {{ index }} + 12px * {{ index }});" data-index="{{ index }}">
+            <img id="Thumbnail-{{ section.id }}-{{ carouselIndex }}" src="{{ media | image_url: width: 700 }}" alt="{{ media.alt | escape }}" loading="lazy" class="carousel-img absolute top-0 transition-left w-full aspect-square" style="left:calc(100% * {{ carouselIndex }} + 12px * {{ carouselIndex }});" data-index="{{ carouselIndex }}">
+            {% assign carouselIndex = carouselIndex | plus: 1 %}
           {% endunless %}
         {% endfor %}
         </div>
