--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -10,7 +10,7 @@
         jsVariantImages.push(img{{ forloop.index0 }})
     {% endfor %}
 </script>
-<section id="MainProduct-{{ section.id }}" class="w-full px-72 bg-black-50" data-section="{{ section.id }}">
+<section id="MainProduct-{{ section.id }}" class="w-full px-72 bg-black-50 overflow-hidden" data-section="{{ section.id }}">
   {% render 'breadcrumb' %}
   <div class="relative product flex to-md:flex-col items-start gap-s10 lg:px-36 pb-s12 md:pb-s13 max-w-content-lg mx-auto">
     <div id="images-{{ section.id }}" class="images flex-1 grid grid-cols-2 gap-s3 to-md:hidden">
@@ -28,7 +28,7 @@
         <div style="padding-top:100%; width:100%;"></div>
         {% assign carouselIndex = 0 %}
         {% if product.selected_or_first_available_variant.image %}
-          <img id="Thumbnail-{{ section.id }}-0" class="carousel-img absolute top-0 transition-left w-full aspect-square object-cover" style="left:calc(100% * 0);" src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}" alt="{{ product.selected_or_first_available_variant.image.alt | escape }}" data-index="0">
+          <img id="Thumbnail-{{ section.id }}-0" class="carousel-img variant-image absolute top-0 transition-left w-full aspect-square object-cover" style="left:calc(100% * 0);" src="{{ product.selected_or_first_available_variant.image | image_url: width: 700 }}" alt="{{ product.selected_or_first_available_variant.image.alt | escape }}" data-index="0">
           {% assign carouselIndex = carouselIndex | plus: 1 %}
         {% endif %}
         {%- for media in product.media -%}
@@ -69,7 +69,7 @@
           <fieldset class="flex gap-s2 pt-s6">
             {% render 'product-colors', product: product, preview: false %}
           </fieldset>
-          <fieldset class="flex justify-start gap-s4 mt-s6">
+          <fieldset class="flex justify-start flex-wrap gap-s4 mt-s6">
             {% for option in product.options_with_values %}
               {% if option.name == "Size" %}
                 {% for optionValue in option.values %}
