--- a/sections/navigation.liquid
+++ b/sections/navigation.liquid
@@ -75,13 +75,13 @@
       <div class="flex gap-s5 px-s5 mt-s8 lg:hidden">
         <div class="relative flex-1 flex items-end p-s2 h-[240px] bg-black-50">
           {% if section.settings.mobileFeature1Img %}  
-            <img src="{{ section.setttings.mobileFeature1Img.src }}" alt="{{ section.setttings.mobileFeature1Img.alt }}" class="object-cover w-full h-full absolute top-0 left-0">
+            <img src="{{ section.settings.mobileFeature1Img }}" alt="{{ section.settings.mobileFeature1Img.alt }}" class="object-cover w-full h-full absolute top-0 left-0">
           {% endif %}
           <a class="btn w-full z-auto " href="{{ section.settings.mobileFeature1Link }}">{{ section.settings.mobileFeature1Title }}</a>
         </div>
         <div class="relative flex-1 flex items-end p-s2 h-[240px] bg-black-50">
           {% if section.settings.mobileFeature1Img %}  
-            <img src="{{ section.setttings.mobileFeature2Img.src }}" alt="{{ section.setttings.mobileFeature2Img.alt }}" class="object-cover w-full h-full absolute top-0 left-0">
+            <img src={{ section.settings.mobileFeature2Img }}" alt="{{ section.settings.mobileFeature2Img.alt }}" class="object-cover w-full h-full absolute top-0 left-0">
           {% endif %}
           <a class="btn w-full z-auto " href="{{ section.settings.mobileFeature2Link }}">{{ section.settings.mobileFeature2Title }}</a>
         </div>
