Format content entry experience

--- a/sections/navigation.liquid
+++ b/sections/navigation.liquid
@@ -229,34 +229,42 @@
       }
     ],
     "settings": [
+        {
+            "type": "header",
+            "content": "Mobile Feature 1"
+        },
       {
         "id": "mobileFeature1Title",
-        "label": "Mobile Feature 1 Label",
+        "label": "Label",
         "type": "text",
         "default": "Women"
       },
       {
         "id": "mobileFeature1Link",
-        "label": "Mobile Feature 1 Link Url",
+        "label": "Link Url",
         "type": "url"
       },
       {
         "id": "mobileFeature1Img",
-        "label": "Mobile Feature 1 Image",
+        "label": "Image",
         "type": "image_picker"
       },
       {
+        "type": "header",
+        "content": "Mobile Feature 2"
+      },
+      {
         "id": "mobileFeature2Title",
-        "label": "Mobile Feature 2 Label",
+        "label": "Label",
         "type": "text",
         "default": "Kids"
       }, {
         "id": "mobileFeature2Link",
-        "label": "Mobile Feature 2 Link Url",
+        "label": "Link Url",
         "type": "url"
       }, {
         "id": "mobileFeature2Img",
-        "label": "Mobile Feature 2 Image",
+        "label": "Image",
         "type": "image_picker"
       }
     ]
