override form submit

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -121,22 +121,20 @@
           </product-form>
         {% else %}
           <label for="email" class="block mt-s7">Get notified when this product is back in stock:</label>
-          <form id="email_signup" action="https://manage.kmail-lists.com/subscriptions/subscribe?a=WUN3cr&g=UAW7nW" method="POST" class="mt-s3 w-full  py-0 flex">
+          <form id="email_signup" action="" method="POST" class="mt-s3 w-full  py-0 flex">
             <input type="hidden" name="g" value="UAW7nW">
             <input type="email" value="" name="email" id="k_id_email" placeholder="Enter your email" class="py-s2 outline-none btn--borderless faux-p flex-1 mr-s3"/>
-            <button type="submit" id="notifySignup" class="btn  capitalize tracking-0 w-max">Notify Me</button>
+            <button type="submit" id="notifySignup" class="btn  capitalize tracking-0 w-max" onclick="notifySignup()">Notify Me</button>
           </form>
-  
         {% endif %}
-        <script type="text/javascript" src="//www.klaviyo.com/media/js/public/klaviyo_subscribe.js"></script>
       </div>
-      
+
       {% if product.description.size > 0 %}
         <div class="mt-s10">
           <p class="faux-p-sm text-black-800">{{ product.description }}</p>
         </div>
       {% endif %}
-      
+
       {% assign accordionCount = section.blocks | size %}
       {% if accordionCount > 0 %}
         <div class="faq__accordion mt-s10">
@@ -165,7 +163,7 @@
           </ul>
         </div>
       {% endif %}
-      
+
       <div class="share flex justify-between items-center py-s7 border-t-[3px] border-black-100">
         <p class="faux-p-sm text-black-700">Share</p>
         <div class="text-black-400 flex gap-s3">
