--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -3728,6 +3728,14 @@ video {
   margin-left: 24px;
 }
 
+#app .-mt-30{
+  margin-top: -30px;
+}
+
+#app .-mt-36{
+  margin-top: -36px;
+}
+
 #app .ml-\[36px\]{
   margin-left: 36px;
 }
@@ -3744,16 +3752,12 @@ video {
   margin-right: -2px;
 }
 
-#app .-mt-30{
-  margin-top: -30px;
-}
-
-#app .-mt-36{
-  margin-top: -36px;
-}
-
 #app .block{
   display: block;
+}
+
+#app .\!block{
+  display: block !important;
 }
 
 #app .inline-block{
@@ -4005,10 +4009,6 @@ video {
 
 #app .w-\[236px\]{
   width: 236px;
-}
-
-#app .w-5\/6{
-  width: 83.333333%;
 }
 
 #app .max-w-content{
@@ -5195,6 +5195,10 @@ video {
     margin-top: -56px;
   }
 
+  #app .md\:inline{
+    display: inline;
+  }
+
   #app .md\:hidden{
     display: none;
   }
@@ -5538,21 +5542,12 @@ video {
     margin-right: auto;
   }
 
-  #app .to-md\:-mx-30{
-    margin-left: -30px;
-    margin-right: -30px;
+  #app .to-md\:-mt-36{
+    margin-top: -36px;
   }
 
   #app .to-md\:mt-\[calc\(80\%\+20px\)\]{
     margin-top: calc(80% + 20px);
-  }
-
-  #app .to-md\:-mt-30{
-    margin-top: -30px;
-  }
-
-  #app .to-md\:-mt-36{
-    margin-top: -36px;
   }
 
   #app .to-md\:flex{
